# yubihsm-ed-sign

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  flake.nix  yubihsm-ed-sign.cabal
.direnv/: cache-.337114.9887f024766  drv
app/: Main.hs
exe/: Main.hs
nix/: mergeDevShells.nix  rust.nix
rustbits/: Cargo.toml  test.rs
rustbits/src/: lib.rs  test.rs
src/: Api.hs  App.hs  Hex.hs  Lib.hs  Main.hs  lib.rs
tests/: Main.hs  PutEdKey.hs
