cabal-version:      2.4
name:               yubihsm-ed-sign
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Oleg Prutz
maintainer:         oleg@mlabs.city

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    other-extensions: ForeignFunctionInterface
    build-depends:    base >=4.13.0.0 && <=4.18.0.0
                    , bytestring
    default-language: Haskell2010
    extra-libraries:  
        -- TODO: Uncomment this after building Rust binary via Nix, and using it in Haskell dev env.
          yubihsmedsign
          pthread
    -- TODO: Nixify and drop this.
    extra-lib-dirs:   rustbits/target/release
