cabal-version:      2.4
name:               yubihsm-ed-sign
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Oleg Prutz
maintainer:         oleg@mlabs.city

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
  default-extensions:
    DataKinds
    DeriveGeneric
    TypeOperators
    TypeApplications
    DerivingStrategies
    OverloadedStrings
    ScopedTypeVariables
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wno-partial-type-signatures -Wmissing-deriving-strategies


executable signer
  import: lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  base >=4.13.0.0 && <=4.18.0.0
                , yubihsm-ed-sign


library
    import: lang
    hs-source-dirs:   src
    exposed-modules:
      Lib
      Hex
      Api
    other-extensions: ForeignFunctionInterface
    build-depends:    base >=4.13.0.0 && <=4.18.0.0
                    , bytestring
                    , split
                    , aeson
                    , bech32
                    , fast-bech32
                    , text
    default-language: Haskell2010

    extra-libraries:
          pthread
        , yubihsmedsign

test-suite test-yubihsm-ed-sign
    import: lang
    type:              exitcode-stdio-1.0
    main-is:           Main.hs
    default-language:  Haskell2010
    build-depends:     base >=4.13.0.0 && <=4.18.0.0
                     , bytestring
                     , HUnit
                     , text
                     , transformers
    other-modules:     Lib
    extra-libraries:
          pthread
        , yubihsmedsign
    hs-source-dirs:    tests src
